--- a/paginas/detalle-producto/detalleProducto.html
+++ b/paginas/detalle-producto/detalleProducto.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PW_Det_Pro</title>
-    <link rel="stylesheet" href="CSS/estilos.css">
+    <title>Producto</title>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="DetalleProducto.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <header class="nav__global">
@@ -26,26 +29,29 @@
                     <div class="nav__global__container">
                         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html"><img
-                                        src="public/iconos/libro-abierto.png" alt=""></a>
+                                <a class="nav-link active" aria-current="page" href="/index.html"><img
+                                        src="/public/iconos/libro-abierto.png" alt=""></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav__global__item"
-                                    href="paginas/productos/Productos.html">Productos</a>
+                                    href="/paginas/productos/Productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav__global__item" href="paginas/contacto/contacto.html">Contacto</a>
+                                <a class="nav-link nav__global__item"
+                                    href="/paginas/contacto/contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav__global__item" href="paginas/FAQ/FAQ.html">FAQ</a>
+                                <a class="nav-link nav__global__item" href="/paginas/FAQ/FAQ.html">FAQ</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav mr-auto mb-2 mb-lg-0  nav__global__icons d-flex">
                             <li class="nav-item">
-                                <a class="nav-link" href="paginas/perfil/Perfil.html"><img src="public/iconos/usuario.png" alt=""></a>
+                                <a class="nav-link" href="/paginas/perfil/Perfil.html"><img
+                                        src="/public/iconos/usuario.png" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="paginas/carrito/Carrito.html"><img src="public/iconos/carrito-de-compras.png" alt=""></a>
+                                <a class="nav-link" href="/paginas/carrito/Carrito.html"><img
+                                        src="/public/iconos/carrito-de-compras.png" alt=""></a>
                             </li>
                         </ul>
                     </div>
@@ -55,86 +61,107 @@
 
     </header>
 
-    <div class="Contanier-title">
-        <main>
-            <div class="container-img">
-                <img class="cristy1" src="img/cristy1.jpg" alt="">
-            </div>
-            <div class="container-info-product">
-                <div class="container-price">
-                    <span>$2500</span>
-                    <i class="fa-solid fa-chevron-right"></i>
-                </div>
-                <div class="container-tipo">
-                    <div class="form-tipo">
-                        <label for="tipo"></label>
-                        <select name="tipo" id="">
-                            <option disabled selected value="">
-                                Elegi el tipo
-                            </option>
-                            <option value="fisico">Fisico</option>
-                            <option value="digital">Digital</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="container-autor">
-                    <span>Autor: Agatha Cristie</span>
-                </div>
-                <div class="container-editorial">
-                    <span>Editorial: Booket</span>
-                </div>
-                <div class="container-genero">
-                    <span>Genero:Policial</span>
-                </div>
-                <div class="container-details-product">
-                    <div class="form-group">
-                        <label for="cantidad">Cantidad</label>
-                        <select name="cant" id="">
-                            <option disabled selected value="">
-                                Elegi cantidad
-                            </option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                        </select>
-                    </div>
+    <main>
+        <div class="contenedor">
+            <div class="columna">
+                <div class="container-img">
+                    <img class="cristy1" src="/public/imagenes/libro.png" alt="">
                 </div>
             </div>
-            <div class="container-add-cart">               
-                <button class="btn-add-to-cart">
-                    <i class="fa-solid
-                    fa-plus"></i>
-                    Añadir al carrito
-                </button>
-            </div>
-            <div class="container-descripcion">
-                <div class="title-description">
-                    <h4>Descripcion</h4>
-                    <i class="fa solid 
-                    fa-chevron-down"></i>
-                </div>
-                <div class="text-descripcion">
-                    <p>
-                        Un grupo de viajeros se ven atrapados en el Orient Express en plena tormenta de nieve. Entre ellos pronto se descubre un cadáver. El asesino tiene que ser uno de los presentes. Al detective más famoso de la historia le corresponde averiguar quién ha cometido el crimen.
-                    </p>
-                </div>
-            </div>
-            <div class="container-leer-parrafo">
-                <div class="title-leer-parrafo">
-                    <h4>Leer parrafo</h4>
-                    <i class="fa solid 
-                    fa-chevron-down"></i>
-                </div>
-                <div class="text-leer-parrafo">
-                    <a href="https://planetadelibrosar0.cdnstatics.com/libros_contenido_extra/48/47746_TPCW_Asesinato%20en%20el%20Orient%20express.pdf">Leer fragmento</a>
-                </div>
-            </div>
+            <div class="columna">
+                <div class="fila">
+                    <div class="subcolumna">
+                        <div class="container-info-product">
 
-        </main>
+                            <div class="container-tipo">
+                                <p>Titulo</p>
+                                <div class="form-tipo">
+                                    <label for="tipo"></label>
+                                    <select name="tipo" id="">
+                                        <option disabled selected value="">
+                                            Elegi el tipo
+                                        </option>
+                                        <option value="fisico">Fisico</option>
+                                        <option value="digital">Digital</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="container-autor">
+                                <span>Autor: Agatha Cristie</span>
+                            </div>
+                            <div class="container-editorial">
+                                <span>Editorial: Booket</span>
+                            </div>
+                            <div class="container-genero">
+                                <span>Genero:Policial</span>
+                            </div>
+                            <div class="container-details-product">
+                                <div class="form-group">
+                                    <label for="cantidad">Cantidad</label>
+                                    <select name="cant" id="">
+                                        <option disabled selected value="">
+                                            Elegi cantidad
+                                        </option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="subcolumna">
+                        <div class="container-price">
+                            <span>$2500</span>
+                            <i class="fa-solid fa-chevron-right"></i>
+                            <div class="container-add-cart">
+                                <button class="btn-add-to-cart">
+                                    <i class="fa-solid
+                                    fa-plus"></i>
+                                    Añadir al carrito
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="fila">
+                    <div class="container-descripcion">
+                        <div class="title-description">
+                            <h4>Descripcion</h4>
+                            <i class="fa solid 
+        fa-chevron-down"></i>
+                        </div>
+                        <div class="text-descripcion">
+                            <p>
+                                Un grupo de viajeros se ven atrapados en el Orient Express en plena tormenta de nieve.
+                                Entre
+                                ellos pronto se descubre un cadáver. El asesino tiene que ser uno de los presentes. Al
+                                detective más famoso de la historia le corresponde averiguar quién ha cometido el
+                                crimen.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- <div class="container-leer-parrafo">
+    <div class="title-leer-parrafo">
+        <h4>Leer parrafo</h4>
+        <i class="fa solid 
+        fa-chevron-down"></i>
     </div>
+    <div class="text-leer-parrafo">
+        <a
+            href="https://planetadelibrosar0.cdnstatics.com/libros_contenido_extra/48/47746_TPCW_Asesinato%20en%20el%20Orient%20express.pdf">Leer
+            fragmento</a>
+    </div>
+</div> -->
+                </div>
+            </div>
+        </div>
+    </main>
 
     <script src="https://kit.fontawesome.com/28aeac4d82.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
